<resources>
    <!--Common-->
    <string name="app_name" translatable="false">Pager</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="delete">Delete</string>

    <string name="menu_search">Search</string>

    <!--Auth-->
    <string name="biometrics_auth_title">Pager app authentication</string>
    <string name="biometrics_auth_subtitle">This is used to check user validity</string>
    <string name="biometrics_auth_description">Or cancel and input pin</string>
    <string name="biometrics_auth_negative_button">Auth with pin</string>

    <string name="biometrics_check_failed">Biometrics check failed</string>

    <!--Chat list-->
    <string name="empty_view_no_chats_text">No chats</string>

    <string name="dialog_new_chat_title">Input addressee</string>
    <string name="dialog_new_chat_button_create_or_open">Create/Open</string>
    <string name="dialog_new_chat_button_create">Create</string>
    <string name="dialog_new_chat_cancel_button" translatable="false">@string/cancel</string>

    <string name="chat_item_draft">Draft</string>

    <string name="select_chats_by_chats_title">Select chat</string>
    <string name="select_chats_by_apps_title">Select chats</string>

    <string name="invalid_number_dialog_title">Invalid number</string>
    <string name="invalid_number_dialog_message">Please specify the correct integer number</string>

    <!--Chat-->
    <string name="message_input_hint">Your message</string>
    <string name="message_setting_invert_polarity">Invert polarity</string>
    <string name="message_setting_invert_alpha">Textual</string>
    <string name="message_setting_tone">Tone</string>
    <string name="message_setting_frequency">Frequency</string>

    <string name="menu_action_rename">Rename</string>

    <string name="message_action_resend">Resend</string>

    <string name="dialog_rename_chat_title">Input new addressee name</string>
    <string name="dialog_rename_chat_ok_button" translatable="false">@string/ok</string>
    <string name="dialog_rename_chat_cancel_button" translatable="false">@string/cancel</string>

    <string name="no_messages">No messages</string>

    <string name="empty_view_no_messages_text" translatable="false">@string/no_messages</string>
    <!--Settings-->
    <string name="settings">Settings</string>

    <string name="security_category">Security</string>

    <string name="preference_pin_code_title">Pin-code to open app</string>
    <string name="preference_biometrics_title">Biometrics to open app</string>
    <string name="biometrics_setup_description">Or cancel and use pin only</string>
    <string name="biometrics_setup_negative_button">Use pin only</string>

    <string name="pin_setup_title">Setup pin-code</string>
    <string name="pin_check_title">Input pin once again</string>

    <string name="notification_forwarding_category">Notification forwarding</string>

    <string name="notification_forwarding_by_apps">Group by apps</string>
    <string name="notification_forwarding_by_chats">Group by chats</string>

    <string name="notification_reading_permission_dialog_title">Notification reading permission</string>
    <string name="notification_reading_permission_dialog_message">To forward notification app requires notification reading permission to be granted. Click "OK" to open settings and toggle the switch on to grant permission</string>

    <string name="send_logs_title">Send logs</string>
    <string name="send_logs_no_logs">No logs yet</string>
    <string name="send_logs_apps_select_title">Select app to send to</string>

    <!--App select-->
    <string name="app_select_by_apps_title">Select app</string>
    <string name="app_select_by_chats_title">Select apps</string>

    <string name="menu_show_system_apps">Show system apps</string>
    <string name="menu_only_apps_with_launcher">Only apps with launcher</string>

</resources>