<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/message_input_collapsed_height" />

    <TextView
        android:id="@+id/empty_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_view_no_messages_text"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/message_input_collapsed_height"
        tools:visibility="visible"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/send_layout_coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:id="@+id/send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:behavior_peekHeight="@dimen/message_input_collapsed_height"
            tools:behavior_peekHeight="400dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffeeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/message_input_collapsed_height"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/send_settings_button"
                    android:layout_width="@dimen/send_button_size"
                    android:layout_height="@dimen/send_button_size"
                    android:background="?selectableItemBackgroundBorderless"
                    android:backgroundTint="@null"
                    android:src="@drawable/ic_menu_settings" />

                <EditText
                    android:id="@+id/message_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/message_input_hint" />

                <ImageButton
                    android:id="@+id/send_button"
                    android:layout_width="@dimen/send_button_size"
                    android:layout_height="@dimen/send_button_size"
                    android:background="?selectableItemBackgroundBorderless"
                    android:backgroundTint="@null"
                    android:src="@drawable/ic_send_message" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffeeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/message_settings_vertical_margin"
                android:layout_marginHorizontal="@dimen/message_settings_horizontal_margin">

                <CheckBox
                    android:id="@+id/invert_polarity_cb"
                    style="@style/MessageSettingsCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:text="@string/message_setting_invert_polarity" />

                <CheckBox
                    android:id="@+id/type_switch"
                    style="@style/MessageSettingsCheckBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/message_setting_invert_alpha" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/message_settings_horizontal_margin"
                android:text="@string/message_setting_tone" />

            <RadioGroup
                android:id="@+id/tone_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/message_settings_horizontal_margin"
                android:layout_marginVertical="@dimen/message_settings_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tone_a_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="A" />

                <RadioButton
                    android:id="@+id/tone_b_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:layout_weight="1"
                    android:text="B" />

                <RadioButton
                    android:id="@+id/tone_c_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:layout_weight="1"
                    android:text="C" />

                <RadioButton
                    android:id="@+id/tone_d_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="D" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/message_settings_horizontal_margin"
                android:text="@string/message_setting_frequency" />

            <RadioGroup
                android:id="@+id/freq_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/message_settings_horizontal_margin"
                android:layout_marginVertical="@dimen/message_settings_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/freq_512_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:layout_weight="1"
                    android:text="512" />

                <RadioButton
                    android:id="@+id/freq_1200_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/message_settings_horizontal_margin"
                    android:layout_weight="1"
                    android:text="1200" />

                <RadioButton
                    android:id="@+id/freq_2400_radio"
                    style="@style/MessageSettingsRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="2400" />

            </RadioGroup>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>